# work-at-olist

./: .env.example  .gitignore  Makefile  Procfile  README.md  authors.csv  pyproject.toml  requirements.txt
conf/: settings.py  urls.py
olist-library/: pyproject.toml
olist-library/conf/: settings.py  urls.py
